# Simple

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  SimpleSandbox.cpp
cmake/: UdpateGitSubModules.cmake
docs/: CMakeLists.txt
include/: Cmake.h.in  Simple.h  Version.h.in
include/Simple/: App.h  App.hpp  CircularBuffer.h  CircularBuffer.hpp  Core.hpp  EntryPoint.h  EntryPoint.hpp  Log.h  Log.hpp  MWSRFixedSizeQueue.h  MWSRFixedSizeQueue.hpp  PCHeader.h  SimpleCore.h
include/Simple/Core/: Input.h  KeyCodes.h  MouseCodes.h
include/Simple/Events/: ApplicationEvent.h  Event.h  Event.hpp  KeyEvent.h  MouseEvent.h
include/Simple/Utility/: Log.h  MWSRFixedSizeQueue.h
src/: App.cpp  CMakeLists.txt  Core.cpp  Input.cpp  Log.cpp  PCHeader.cpp
tests/: CMakeLists.txt
